# ntag424_python

./: .gitignore  key_manager.py  main.py  ntag424.py  pyproject.toml
docs/: README.md
src/ntag424_python/: __init__.py  constants.py  driver.py  exceptions.py
tests/: main.py  test_packet_structure.py  verify_logic.py
